fixed bugs:chatbot-toggler visibility

--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body{
     align-items: center;
     justify-content: center;
     transition: all 0.2s ease;
-    z-index: 9999;
 }
 
 .show-chatbot .chatbot-toggler{
